# MiPCManager_Patch

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TechnicalIntroduce.md  build.rs
.github/workflows/: release.yml
resources/: mipcm_gui.rc  mipcm_gui_test.exe.manifest  mipcm_gui_test.rc  mipcm_patch.rc
src/: audio_dual_nic.rs  audio_wifi_route.rs  camera_toast.rs  device_spoof.rs  elevate.rs  install.rs  lib.rs  locale_spoof.rs  main.rs  mipcaudio_lan.rs  ops.rs  pc_manager_installer.rs  smbios.rs  smbios_spoof.rs  x64_trampoline.rs
src/dotnet/: metadata.rs  method_body.rs  mod.rs  pe.rs
src/experimental/: audio_dual_nic.rs  mod.rs  smbios.rs  smbios_spoof.rs  x64_trampoline.rs
src/i18n/: mod.rs
src/infra/: bytes.rs  mod.rs  pe.rs  powershell.rs  registry.rs
src/install/: mod.rs  pc_manager_installer.rs
src/patches/: mod.rs
src/patches/audio/: mod.rs
src/patches/camera/: mod.rs
src/patches/camera/dotnet/: metadata.rs  method_body.rs  mod.rs
src/patches/device/: mod.rs
src/patches/locale/: mod.rs
src/ui/: app.slint  gui.rs  mod.rs  tui.rs
src/ui/gui/: main.rs
src/uninstall/: mod.rs
