[package]
name = "mipcmanager_patch"
version = "1.5.4"
edition = "2024"
description = "小米电脑管家 (MiPCManager) 功能增强补丁工具：原生 DLL 字符串补丁 + .NET 方法体重定位补丁"

[lib]
name = "mipcmanager_patch"
path = "src/lib.rs"

[[bin]]
name = "mipcm_patch"
path = "src/main.rs"

[[bin]]
name = "mipcm_gui"
path = "src/bin/gui.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
sysinfo = "0.39"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# 轻量即时模式 GUI（mipcm_gui）：glow 后端，体积可控。
eframe = { version = "0.35", default-features = false, features = [
    "glow",
    "default_fonts",
] }
egui = "0.35"
ico = "0.5"
rfd = "0.17"

[build-dependencies]
embed-resource = "3.0.11"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
