[package]
name = "mipcmanager_patch"
version = "1.7.0"
edition = "2024"
description = "小米电脑管家 (MiPCManager) 功能增强补丁工具：原生 DLL 字符串补丁 + .NET 方法体重定位补丁"

[lib]
name = "mipcmanager_patch"
path = "src/lib.rs"

[[bin]]
name = "MiPCM_CLI"
path = "src/main.rs"

[[bin]]
name = "MiPCM_GUI"
path = "src/ui/gui.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
sysinfo = "0.39"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# Slint 声明式 GUI 框架
slint = "1"
# 原生文件选择对话框
rfd = "0.17"

[build-dependencies]
embed-resource = "3.0.11"
slint-build = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
